<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:layout_margin="5dp"
    android:gravity="center"
	android:orientation="vertical">
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:gravity="bottom|center"
		android:orientation="vertical">
		
		<RadioGroup
			android:id="@+id/main_select_code"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:gravity="center">

			<RadioButton
				android:id="@+id/main_code_codon"
				android:onClick="codon"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/main_code_codon" />

			<RadioButton
				android:id="@+id/main_code_anti"
				android:onClick="antiCodon"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/main_code_anti" />

			<RadioButton
				android:id="@+id/main_code_triplet"
				android:onClick="tripletCode"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/main_code_triplet" />

		</RadioGroup>

		<TextView
			android:text="@string/main_input_info"
			android:textSize="20sp"
			android:id="@+id/main_codon_input"
			android:gravity="center"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
		
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:orientation="vertical">
		
		<LinearLayout
			android:layout_weight="1"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal">

			<Button
				android:id="@+id/main_input_a"
				android:text="\nA\n"
				android:textSize="20sp"
				android:onClick="input_a"
				android:layout_weight="1"
				android:layout_width="match_parent"
				android:layout_height="match_parent" />

			<Button
				android:id="@+id/main_input_u"
				android:text="\nU\n"
				android:textSize="20sp"
				android:onClick="input_u"
				android:layout_weight="1"
				android:layout_width="match_parent"
				android:layout_height="match_parent" />

		</LinearLayout>

		<LinearLayout
			android:layout_weight="1"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal">

			<Button
				android:id="@+id/main_input_g"
				android:text="\nG\n"
				android:textSize="20sp"
				android:onClick="input_g"
				android:layout_weight="1"
				android:layout_width="match_parent"
				android:layout_height="match_parent" />

			<Button
				android:id="@+id/main_input_c"
				android:text="\nC\n"
				android:textSize="20sp"
				android:onClick="input_c"
				android:layout_weight="1"
				android:layout_width="match_parent"
				android:layout_height="match_parent" />

		</LinearLayout>

		<LinearLayout
			android:layout_weight="1"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal">
		
			<Button
				android:onClick="erase"
				android:layout_weight="1"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:text="@string/main_erase_input"
				android:textSize="20sp"/>
			
			<Button
				android:onClick="analyze"
				android:layout_weight="1"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:text="@string/main_analyze_codon"
				android:textSize="20sp"/>
		
		</LinearLayout>
		
	</LinearLayout>
		
</LinearLayout>
